<resources>
    <string name="app_name">Pelada organizada</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="toolbar_settings">Configure sua pelada</string>
    <string name="count_players">Quantidade de jogadores por time:</string>
    <string name="total_players">Nome dos jogadores:</string>
    <string name="player">%s Jogador</string>
    <string name="players">%s Jogadores</string>
    <string name="switch_tie">Empate sai os dois:</string>
    <string name="iniciar_sorteio">Iniciar Sorteio</string>
    <string name="example_input">Ex: \nJoão\nVictor</string>
    <string name="game_1">Pelada 1</string>
    <string name="game_2">Pelada 2</string>
    <string name="game_3">Pelada 3</string>
    <string name="game_now">Jogando agora:</string>
    <string name="my_game">Minha pelada</string>
    <string name="vs">x</string>
    <string name="team_one">Time 1</string>
    <string name="team_two">Time 2</string>
    <string name="tie">Declarar empate</string>
    <string name="next_games">Próximos jogos:</string>
    <string name="message_error">Verifique se não possuem jogadores com nomes iguais ou se possuem pelo menos dois times</string>
    <string name="alert">Alerta</string>
    <string name="ok">Confirmar</string>
    <string name="title_team">Time %d</string>
    <string name="new_player">Novos jogadores</string>
    <string name="message_confirm_win_team">Confirme a vitória desse time</string>
    <string name="add_new_players">Adicionar novos jogadores</string>
    <string name="confirm_finish_game">Tem certeza que deseja encerra esse jogo em andamento?</string>
    <string name="message_confirm_tie_team">Confirme o empate dessas duas equipes</string>
    <string name="message_tie_what_team">Qual dos times jogará primeiro?</string>
    <string name="time_one">Time 1</string>
    <string name="time_two">Time 2</string>
    <string name="confirm">Confirmar</string>
    <string name="menu_title">Selecione uma opção:</string>
    <string name="menu_player_exit">Remover jogador</string>
    <string name="menu_player_exit_description">Esta opção removerá o jogador da lista e vai subir o próximo no lugar reorganizando toda a lista.</string>
    <string name="history_games">Histórico de jogos</string>
    <string name="empty_history">Nenhum jogo aconteceu ainda</string>
    <string name="text_tie">Empate</string>
    <string name="text_exit_player">O jogador saiu ás %s</string>
    <string name="selection_player_payment">Selecione os jogadores conforme forem pagando</string>
    <string name="manager_payment">Gerenciar pagamento de jogadores</string>
    <string name="count_players_total">%s Jogadores</string>
</resources>