<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTie"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/selector_corners_primary_light"
        android:paddingHorizontal="10dp"
        android:text="@string/tie"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBody"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/btnTie">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnTie">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />


            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_tie_what_team"
                android:textSize="14sp"
                android:textColor="@color/darkGray"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/imgClose"
                app:layout_constraintTop_toTopOf="@+id/imgClose" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkTimeOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:textColor="@color/darkGray"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/team_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkTimeTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:textColor="@color/darkGray"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/team_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/selector_corners_primary_light"
                android:paddingHorizontal="10dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkTimeOne" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>