<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="6dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/selector_radio_group_corners_primary_light"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:text="@string/game_1"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/selector_radio_group_corners_primary_light"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/game_2"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/selector_radio_group_corners_primary_light"
                android:button="@android:color/transparent"
                android:text="@string/game_3"
                android:textColor="@color/white" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>